@@ -5,7 +5,6 @@ import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -14,7 +13,7 @@ import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-//import org.apache.logging.log4j.PropertyConfigurator;
+// import org.apache.logging.log4j.PropertyConfigurator;
 
 import de.ids_mannheim.korap.util.KrillProperties;
 import de.ids_mannheim.korap.utils.TimeUtils;
@@ -81,13 +80,13 @@ public class KustvaktConfiguration {
     private String baseURL;
     private Properties properties;
 
-    private Set<String> version;
-    
+    private Set<String> supportedVersions;
+    private String currentVersion;
+
     // deprec?!
     private final BACKENDS DEFAULT_ENGINE = BACKENDS.LUCENE;
 
-    public KustvaktConfiguration (Properties properties)
-            throws Exception {
+    public KustvaktConfiguration (Properties properties) throws Exception {
         load(properties);
         KrillProperties.setProp(properties);
     }
@@ -100,13 +99,15 @@ public class KustvaktConfiguration {
      * @throws Exception
      */
     protected void load (Properties properties) throws Exception {
-        String version = properties.getProperty("supported.api.version", "");
-        if (version.isEmpty()){
-            throw new IllegalArgumentException("supported.api.version must be set in the .conf file");
+        currentVersion = properties.getProperty("current.api.version", "v1.0");
+        String supportedVersions =
+                properties.getProperty("supported.api.version", "");
+        if (supportedVersions.isEmpty()){
+            supportedVersions = currentVersion;
         }
-        this.version = Arrays.stream(version.split(" ")).collect(Collectors.toSet());
-        
-        
+        this.supportedVersions = Arrays.stream(supportedVersions.split(" "))
+                .collect(Collectors.toSet());
+
         baseURL = properties.getProperty("kustvakt.base.url", "/api/*");
         maxhits = new Integer(properties.getProperty("maxhits", "50000"));
         returnhits = new Integer(properties.getProperty("returnhits", "50000"));
@@ -176,15 +177,13 @@ public class KustvaktConfiguration {
     // this.load(props);
     // }
 
-
     /**
      * properties can be overloaded after spring init
      * 
      * @param stream
-     * @throws Exception 
+     * @throws Exception
      */
-    public void setPropertiesAsStream (InputStream stream)
-            throws Exception {
+    public void setPropertiesAsStream (InputStream stream) throws Exception {
         try {
 
             Properties p = new Properties();
@@ -197,7 +196,6 @@ public class KustvaktConfiguration {
 
     }
 
-
     public BACKENDS chooseBackend (String value) {
         if (value == null || value.equals("null"))
             return DEFAULT_ENGINE;
@@ -205,57 +203,56 @@ public class KustvaktConfiguration {
             return Enum.valueOf(BACKENDS.class, value.toUpperCase());
     }
 
-
-
     public static void loadLogger () {
-//        InputStream stream = ConfigLoader.loadConfigStream("log4j.properties");
-//        PropertyConfigurator.configure(stream);
+        // InputStream stream =
+        // ConfigLoader.loadConfigStream("log4j.properties");
+        // PropertyConfigurator.configure(stream);
         jlog.info("Done loading logging framework Log4j!");
     }
 
+    // @Deprecated
+    // public static void loadLog4jLogger () {
+    // /** loadSubTypes log4j configuration file programmatically */
+    // Properties log4j = new Properties();
+    // try {
+    // File f = new File(System.getProperty("user.dir"),
+    // "log4j.properties");
+    // if (f.exists()) {
+    // log4j.load(new FileInputStream(f));
+    // PropertyConfigurator.configure(log4j);
+    // jlog.info(
+    // "using local logging properties file ({}) to configure logging
+    // system",
+    // "./log4j.properties");
+    // return;
+    // }
+    // }
+    // catch (Exception e) {
+    // // do nothing
+    // }
+    // loadClassLogger();
+    // }
 
-
-//    @Deprecated
-//    public static void loadLog4jLogger () {
-//        /** loadSubTypes log4j configuration file programmatically */
-//        Properties log4j = new Properties();
-//        try {
-//            File f = new File(System.getProperty("user.dir"),
-//                    "log4j.properties");
-//            if (f.exists()) {
-//                log4j.load(new FileInputStream(f));
-//                PropertyConfigurator.configure(log4j);
-//                jlog.info(
-//                        "using local logging properties file ({}) to configure logging system",
-//                        "./log4j.properties");
-//                return;
-//            }
-//        }
-//        catch (Exception e) {
-//            // do nothing
-//        }
-//        loadClassLogger();
-//    }
-
-
-//    @Deprecated
-//    private static void loadClassLogger () {
-//        Properties log4j = new Properties();
-//        jlog.info(
-//                "using class path logging properties file to configure logging system");
-//
-//        try {
-//            log4j.load(KustvaktConfiguration.class.getClassLoader()
-//                    .getResourceAsStream("log4j.properties"));
-//        }
-//        catch (IOException e) {
-//            // do nothing
-//        }
-//
-//        PropertyConfigurator.configure(log4j);
-//        jlog.warn(
-//                "No logger properties detected. Using default logger properties");
-//    }
+    // @Deprecated
+    // private static void loadClassLogger () {
+    // Properties log4j = new Properties();
+    // jlog.info(
+    // "using class path logging properties file to configure logging
+    // system");
+    //
+    // try {
+    // log4j.load(KustvaktConfiguration.class.getClassLoader()
+    // .getResourceAsStream("log4j.properties"));
+    // }
+    // catch (IOException e) {
+    // // do nothing
+    // }
+    //
+    // PropertyConfigurator.configure(log4j);
+    // jlog.warn(
+    // "No logger properties detected. Using default logger
+    // properties");
+    // }
 
     public enum BACKENDS {
         NEO4J, LUCENE
