@@ -6,6 +6,15 @@ krill.index.commit.log = log/krill.commit.log
 krill.index.commit.auto = 500
 krill.index.relations.max = 100
 
+krill.namedVC=vc
+
+
+# Kustvakt
+
+current.api.version = v1.0
+# multiple versions separated by space
+supported.api.version = v1.0
+
 kustvakt.base.url=/api/*
 kustvakt.default.pos = tt
 kustvakt.default.lemma = tt
